Dark mode - switch from a background with opacity to a solid color background to prevent perceived z-index issues https://github.com/statamic/cms/issues/12462

--- a/resources/css/elements/tables.css
+++ b/resources/css/elements/tables.css
@@ -97,7 +97,7 @@
 
             /* When the row is hovered, change the background of all its cells to a hover state color */
             &:has(:hover) td {
-                @apply bg-gray-50 dark:bg-white/2.5;
+                @apply bg-gray-50 dark:bg-gray-900;
             }
         }
 
